--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <header class="header-image">
         <div class="headline">
             <div class="container">
-                <h1>Craftniss Everdeen</h1>
-                <h2>I’m getting all kinds of gifts today.</h2>
+                <h1>Craftniss</h1>
+                <h2>"I’m getting all kinds of gifts today."</h2>
             </div>
         </div>
     </header>
