--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="headline">
             <div class="container">
                 <h1>Craftniss</h1>
-                <h2>"I’m getting all kinds of gifts today."</h2>
+                <h2>I’m getting all kinds of gifts today.</h2>
             </div>
         </div>
     </header>
