--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#top">Iris Lopez</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -41,10 +41,10 @@
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="#rings">Rings</a>
                     </li>
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a href="#shoes">Shoes</a>
                     </li>
                 </ul>
             </div>
@@ -53,6 +53,7 @@
         <!-- /.container -->
     </nav>
     <!-- Full Width Image Header -->
+    <a name="top"></a>
     <header class="header-image">
         <div class="headline">
             <div class="container">
@@ -62,6 +63,7 @@
         </div>
     </header>
     <!-- Page Content -->
+    <a name="rings"></a>
     <div class="container">
         <hr class="featurette-divider">
         <!-- Title -->
@@ -123,6 +125,7 @@
             </div>
         </div>
         <!-- /.row -->
+        <a name="shoes"></a>
         <!-- Page Content -->
         <div class="container">
             <hr class="featurette-divider">
@@ -189,16 +192,41 @@
             <footer>
                 <div class="row">
                     <div class="col-lg-12 text-center">
+                        <a href="#top">back to top</a>
                         <p>Copyright &copy; Iris Lopez 2016</p>
                     </div>
                 </div>
             </footer>
         </div>
-        <!-- /.container -->
         <!-- jQuery -->
         <script src="js/jquery.js"></script>
         <!-- Bootstrap Core JavaScript -->
         <script src="js/bootstrap.min.js"></script>
+        <!-- Script to Activate the Carousel -->
+        <script>
+        $(function() {
+            $('a[href*="#"]:not([href="#"])').click(function() {
+                if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) {
+                    var target = $(this.hash);
+                    target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+                    if (target.length) {
+                        $('html, body').animate({
+                            scrollTop: target.offset().top
+                        }, 1000);
+                        return false;
+                    }
+                }
+            });
+        });
+        $(function() {
+            $('.nav a').on('click', function() {
+                if ($('.navbar-toggle').css('display') != 'none') {
+                    $(".navbar-toggle").trigger("click");
+                }
+            });
+        });
+        </script>
+        <!-- /.container -->
 </body>
 
 </html>
