--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta property="og:title" content="Iris Lopez" />
+    <meta property="og:site_name" content="Craftniss" />
+    <meta property="og:description" content="I’m getting all kinds of gifts today." />
+    <meta property="og:image" content="http://graphics.myfavnews.com/images/logo-100x100.jpg" />
     <title>Craftniss</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
