--- a/index.html
+++ b/index.html
@@ -95,10 +95,22 @@
             </div>
         </div>
     </header>
+    <a name="about"></a>
+    <!-- Page Content -->
+    <div class="container spacing">
+        <!-- Title -->
+        <div class="row">
+            <div class="col-lg-12 text-center title">
+                <h3>About me</h3>
+            </div>
+            <p>Lucas ipsum dolor sit amet jabba allie zeltron dor thennqora epicanthix kowakian shmi drach'nam jek. Bith sly anzati kast joruus thrawn vor xizor. Fisto sy colton jusik. Fel jettster rodian rakata whitesun abrion. Mothma grievous lars whiphid sly. Woostoid ozzel skywalker jax. Gossam jabba haruun paploo askajian lepi bimm coway. Felucia mothma epicanthix coruscant tc-14 fortuna trandoshan kanos dexter. Dooku wessell solo naboo kessel ree-yees jacen polis luuke. Luke letaki moff carlist deliah. Allana max glymphid -lom jax.</p>
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.row -->
     <a name="shoes"></a>
     <!-- Page Content -->
-    <div class="container">
-        <hr class="featurette-divider">
+    <div class="container spacing">
         <!-- Title -->
         <div class="row">
             <div class="col-lg-12 text-center title">
@@ -158,6 +170,18 @@
             </div>
         </div>
         <!-- /.row -->
+    <a name="contact"></a>
+    <!-- Page Content -->
+    <div class="container spacing">
+        <!-- Title -->
+        <div class="row">
+            <div class="col-lg-12 text-center title">
+                <h3>Contacts</h3>
+            </div>
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.row -->
         <!-- Footer -->
         <footer>
             <div class="container text-center">
@@ -190,7 +214,7 @@
                             </li>
                         </ul>
                         <a class="backToTop" href="#top">back to top</a>
-                        <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+                        <p class="copyright text-muted">Copyright Iris Lopez 2016</p>
                     </div>
                 </div>
             </div>
