added contact us

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <a href="#shoes">Shoes</a>
                     </li>
                     <li>
-                        <a href="#shoes">Contact</a>
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -103,7 +103,7 @@
             <div class="col-lg-12 text-center title">
                 <h3>About me</h3>
             </div>
-            <p>Lucas ipsum dolor sit amet jabba allie zeltron dor thennqora epicanthix kowakian shmi drach'nam jek. Bith sly anzati kast joruus thrawn vor xizor. Fisto sy colton jusik. Fel jettster rodian rakata whitesun abrion. Mothma grievous lars whiphid sly. Woostoid ozzel skywalker jax. Gossam jabba haruun paploo askajian lepi bimm coway. Felucia mothma epicanthix coruscant tc-14 fortuna trandoshan kanos dexter. Dooku wessell solo naboo kessel ree-yees jacen polis luuke. Luke letaki moff carlist deliah. Allana max glymphid -lom jax.</p>
+            <p class="bio">Lucas ipsum dolor sit amet jabba allie zeltron dor thennqora epicanthix kowakian shmi drach'nam jek. Bith sly anzati kast joruus thrawn vor xizor. Fisto sy colton jusik. Fel jettster rodian rakata whitesun abrion. Mothma grievous lars whiphid sly. Woostoid ozzel skywalker jax. Gossam jabba haruun paploo askajian lepi bimm coway. Felucia mothma epicanthix coruscant tc-14 fortuna trandoshan kanos dexter. Dooku wessell solo naboo kessel ree-yees jacen polis luuke. Luke letaki moff carlist deliah. Allana max glymphid -lom jax.</p>
         </div>
         <!-- /.row -->
     </div>
@@ -126,9 +126,6 @@
                     <div class="caption">
                         <h3>Feature Label</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                        <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
-                        </p>
                     </div>
                 </div>
             </div>
@@ -138,9 +135,6 @@
                     <div class="caption">
                         <h3>Feature Label</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                        <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
-                        </p>
                     </div>
                 </div>
             </div>
@@ -150,9 +144,6 @@
                     <div class="caption">
                         <h3>Feature Label</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                        <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
-                        </p>
                     </div>
                 </div>
             </div>
@@ -162,57 +153,58 @@
                     <div class="caption">
                         <h3>Feature Label</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                        <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
-                        </p>
                     </div>
                 </div>
             </div>
         </div>
         <!-- /.row -->
-    <a name="contact"></a>
-    <!-- Page Content -->
-    <div class="container spacing">
-        <!-- Title -->
-        <div class="row">
-            <div class="col-lg-12 text-center title">
-                <h3>Contacts</h3>
+        <a name="contact"></a>
+        <!-- Page Content -->
+        <div class="container spacing">
+            <!-- Title -->
+            <div class="row">
+                <div class="col-lg-12 text-center title">
+                    <h3>Contacts</h3>
+                    <ul class="list-inline">
+                        <li>
+                            <a href="#">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-facebook fa-stack-1x fa-2x"></i>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-twitter fa-stack-1x fa-2x"></i>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-instagram fa-stack-1x fa-2x"></i>
+                                </span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-12 text-center contacts">
+                    <i class="fa fa-envelope-o"></i>
+                        <abbr title="Email">E</abbr>: <a href="mailto:elena.calligraphy.art@gmail.com">elena.calligraphy.art@gmail.com</a>
+                    <br>
+                    <i class="fa fa-phone"></i>
+                        <abbr title="Phone">P</abbr>: (512) 565-8252
+                </div>
             </div>
+            <!-- /.row -->
         </div>
         <!-- /.row -->
-    </div>
-    <!-- /.row -->
         <!-- Footer -->
         <footer>
             <div class="container text-center">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                        <ul class="list-inline text-center">
-                            <li>
-                                <a href="#">
-                                    <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                                </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                                </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                                </span>
-                                </a>
-                            </li>
-                        </ul>
                         <a class="backToTop" href="#top">back to top</a>
                         <p class="copyright text-muted">Copyright Iris Lopez 2016</p>
                     </div>
