added contact us

--- a/index.html
+++ b/index.html
@@ -124,8 +124,11 @@
                 <div class="thumbnail">
                     <img class="fancybox" src="img/shoes1.jpg" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h4>Black/Black</h4>
+<!--                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>
+                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+                        </p> -->
                     </div>
                 </div>
             </div>
@@ -133,8 +136,7 @@
                 <div class="thumbnail">
                     <img class="fancybox" src="img/shoes2.jpg" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h4>Black/Gold</h4>
                     </div>
                 </div>
             </div>
@@ -142,8 +144,7 @@
                 <div class="thumbnail">
                     <img class="fancybox" src="img/shoes3.jpg" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h4>Brown</h4>
                     </div>
                 </div>
             </div>
@@ -151,8 +152,7 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h4>Feature Label</h4>
                     </div>
                 </div>
             </div>
