--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav pull-right">
+                <ul class="nav navbar-nav links pull-right">
                     <li>
                         <a href="#about">About</a>
                     </li>
@@ -174,12 +174,6 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-twitter fa-stack-1x fa-2x"></i>
-                                </span>
-                            </a>
-                        </li>
                         <li>
                             <a href="#">
                                 <span class="fa-stack fa-lg">
@@ -191,10 +185,10 @@
                 </div>
                 <div class="col-md-12 text-center contacts">
                     <i class="fa fa-envelope-o"></i>
-                        <abbr title="Email">E</abbr>: <a href="mailto:elena.calligraphy.art@gmail.com">elena.calligraphy.art@gmail.com</a>
+                        <abbr title="Email">E</abbr>: <a href="mailto:elena.calligraphy.art@gmail.com">ilopez933@gmail.com</a>
                     <br>
                     <i class="fa fa-phone"></i>
-                        <abbr title="Phone">P</abbr>: (512) 565-8252
+                        <abbr title="Phone">P</abbr>: (956) 802-6395
                 </div>
             </div>
             <!-- /.row -->
