--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <h3>Contacts</h3>
                     <ul class="list-inline">
                         <li>
-                            <a href="#">
+                            <a href="https://www.facebook.com/IrisLopez933">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-facebook fa-stack-1x fa-2x"></i>
                                 </span>
@@ -175,7 +175,7 @@
                         </li>
                         <li>
                         <li>
-                            <a href="#">
+                            <a href="https://www.instagram.com/craftniss/">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-instagram fa-stack-1x fa-2x"></i>
                                 </span>
