--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="col-lg-12 text-center title">
                 <h3>About me</h3>
             </div>
-            <p class="bio">Lucas ipsum dolor sit amet jabba allie zeltron dor thennqora epicanthix kowakian shmi drach'nam jek. Bith sly anzati kast joruus thrawn vor xizor. Fisto sy colton jusik. Fel jettster rodian rakata whitesun abrion. Mothma grievous lars whiphid sly. Woostoid ozzel skywalker jax. Gossam jabba haruun paploo askajian lepi bimm coway. Felucia mothma epicanthix coruscant tc-14 fortuna trandoshan kanos dexter. Dooku wessell solo naboo kessel ree-yees jacen polis luuke. Luke letaki moff carlist deliah. Allana max glymphid -lom jax.</p>
+            <p class="bio">Local Mommy creating shoes with different textures and styles not normally seen in stores. All products are hand sewn and made with love </p>
         </div>
         <!-- /.row -->
     </div>
@@ -167,7 +167,7 @@
                     <h3>Contacts</h3>
                     <ul class="list-inline">
                         <li>
-                            <a href="https://www.facebook.com/IrisLopez933">
+                            <a href="https://www.facebook.com/craftniss/">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-facebook fa-stack-1x fa-2x"></i>
                                 </span>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="col-md-12 text-center contacts">
                     <i class="fa fa-envelope-o"></i>
-                        <abbr title="Email">E</abbr>: <a href="mailto:elena.calligraphy.art@gmail.com">ilopez933@gmail.com</a>
+                        <abbr title="Email">E</abbr>: <a href="mailto:ilopez933@gmail.com">ilopez933@gmail.com</a>
                     <br>
                     <i class="fa fa-phone"></i>
                         <abbr title="Phone">P</abbr>: (956) 802-6395
