--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="col-lg-12 text-center title">
                 <h3>About me</h3>
             </div>
-            <p class="bio">Local Mommy creating shoes with different textures and styles not normally seen in stores. All products are hand sewn and made with love </p>
+            <p align="justify" class="bio">Mother of two<span class="punc">,</span> born with a passion for creating<span class="punc">.</span> My mission is to provide you with handmade goods created with different textures and styles not normally seen in stores<span class="punc">.</span> Each pair of shoes comes with laces of your choice<span class="punc">.</span> All products are hand sewn and made with love<span class="punc">.</span> We also accept custom order requests<span class="punc">,</span> contact information is below<span class="punc">.</span></p>
         </div>
         <!-- /.row -->
     </div>
@@ -125,8 +125,8 @@
                     <img class="fancybox" src="img/shoes1.jpg" alt="">
                     <div class="caption">
                         <h4>Black/Black</h4>
-<!--                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                        <p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+<!--                         <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
                         </p> -->
                     </div>
@@ -137,6 +137,7 @@
                     <img class="fancybox" src="img/shoes2.jpg" alt="">
                     <div class="caption">
                         <h4>Black/Gold</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
@@ -144,7 +145,8 @@
                 <div class="thumbnail">
                     <img class="fancybox" src="img/shoes3.jpg" alt="">
                     <div class="caption">
-                        <h4>Brown</h4>
+                        <h4>Brown/Brown</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
@@ -152,7 +154,8 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h4>Feature Label</h4>
+                        <h4>Shoe</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
