added more image

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
         </div>
         <!-- /.row -->
-        <!-- Page Features -->
+        <!-- First Row Products-->
         <div class="row text-center">
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
@@ -126,7 +126,7 @@
                     <div class="caption">
                         <h4>Black/Black</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-<!--                         <p>
+                        <!--                         <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
                         </p> -->
                     </div>
@@ -152,7 +152,50 @@
             </div>
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <img class="fancybox" src="img/shoes4.jpg" alt="">
+                    <div class="caption">
+                        <h4>Shoe</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.row -->
+        <!-- Second Row Products -->
+        <div class="row text-center">
+            <div class="col-md-3 col-sm-6 hero-feature">
+                <div class="thumbnail">
+                    <img class="fancybox" src="img/laces1.jpg" alt="">
+                    <div class="caption">
+                        <h4>Black/Black</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <!--                         <p>
+                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+                        </p> -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 hero-feature">
+                <div class="thumbnail">
+                    <img class="fancybox" src="img/laces2.jpg" alt="">
+                    <div class="caption">
+                        <h4>Black/Gold</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 hero-feature">
+                <div class="thumbnail">
+                    <img class="fancybox" src="img/laces3.jpg" alt="">
+                    <div class="caption">
+                        <h4>Brown/Brown</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 hero-feature">
+                <div class="thumbnail">
+                    <img class="fancybox" src="img/laces4.jpg" alt="">
                     <div class="caption">
                         <h4>Shoe</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -177,21 +220,21 @@
                             </a>
                         </li>
                         <li>
-                        <li>
-                            <a href="https://www.instagram.com/craftniss/">
-                                <span class="fa-stack fa-lg">
+                            <li>
+                                <a href="https://www.instagram.com/craftniss/">
+                                    <span class="fa-stack fa-lg">
                                     <i class="fa fa-instagram fa-stack-1x fa-2x"></i>
                                 </span>
-                            </a>
-                        </li>
+                                </a>
+                            </li>
                     </ul>
                 </div>
                 <div class="col-md-12 text-center contacts">
                     <i class="fa fa-envelope-o"></i>
-                        <abbr title="Email">E</abbr>: <a href="mailto:ilopez933@gmail.com">ilopez933@gmail.com</a>
+                    <abbr title="Email">E</abbr>: <a href="mailto:ilopez933@gmail.com">ilopez933@gmail.com</a>
                     <br>
                     <i class="fa fa-phone"></i>
-                        <abbr title="Phone">P</abbr>: (956) 802-6395
+                    <abbr title="Phone">P</abbr>: (956) 802-6395
                 </div>
             </div>
             <!-- /.row -->
