--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img class="fancybox" src="img/shoes4.jpg" alt="">
+                    <img class="fancybox" src="img/shoes4.JPG" alt="">
                     <div class="caption">
                         <h4>Shoe</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -165,7 +165,7 @@
         <div class="row text-center">
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img class="fancybox" src="img/laces1.jpg" alt="">
+                    <img class="fancybox" src="img/laces1.JPG" alt="">
                     <div class="caption">
                         <h4>Black/Black</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -177,7 +177,7 @@
             </div>
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img class="fancybox" src="img/laces2.jpg" alt="">
+                    <img class="fancybox" src="img/laces2.JPG" alt="">
                     <div class="caption">
                         <h4>Black/Gold</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -186,7 +186,7 @@
             </div>
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img class="fancybox" src="img/laces3.jpg" alt="">
+                    <img class="fancybox" src="img/laces3.JPG" alt="">
                     <div class="caption">
                         <h4>Brown/Brown</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -195,7 +195,7 @@
             </div>
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img class="fancybox" src="img/laces4.jpg" alt="">
+                    <img class="fancybox" src="img/laces4.JPG" alt="">
                     <div class="caption">
                         <h4>Shoe</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
