--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="thumbnail">
                     <img class="fancybox" src="img/shoes4.jpg" alt="">
                     <div class="caption">
-                        <h4>Shoe</h4>
+                        <h4>Booties</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                 <div class="thumbnail">
                     <img class="fancybox" src="img/laces1.JPG" alt="">
                     <div class="caption">
-                        <h4>Black/Black</h4>
+                        <h4>Gold Laces</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         <!--                         <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
@@ -179,7 +179,7 @@
                 <div class="thumbnail">
                     <img class="fancybox" src="img/laces2.JPG" alt="">
                     <div class="caption">
-                        <h4>Black/Gold</h4>
+                        <h4>Black Laces</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                 <div class="thumbnail">
                     <img class="fancybox" src="img/laces3.JPG" alt="">
                     <div class="caption">
-                        <h4>Brown/Brown</h4>
+                        <h4>Short Black Laces</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -197,7 +197,7 @@
                 <div class="thumbnail">
                     <img class="fancybox" src="img/laces4.JPG" alt="">
                     <div class="caption">
-                        <h4>Shoe</h4>
+                        <h4>Leopard Laces</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
