--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
         <div class="row text-center">
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img class="fancybox" src="img/laces1.JPG" alt="">
+                    <img class="fancybox" src="img/laces3.JPG" alt="">
                     <div class="caption">
-                        <h4>Gold Laces</h4>
+                        <h4>Grey</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         <!--                         <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
@@ -177,18 +177,18 @@
             </div>
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img class="fancybox" src="img/laces2.JPG" alt="">
+                    <img class="fancybox" src="img/laces1.JPG" alt="">
                     <div class="caption">
-                        <h4>Black Laces</h4>
+                        <h4>Gold Laces</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img class="fancybox" src="img/laces3.JPG" alt="">
+                    <img class="fancybox" src="img/laces2.JPG" alt="">
                     <div class="caption">
-                        <h4>Short Black Laces</h4>
+                        <h4>Black Leather Laces</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
